@@ -1,0 +1,17 @@
+<?xml version="1.0" encoding="utf-8"?>
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+    <!--MCOHome CO2 Monitor MH9-CO2-WD -->
+    <!-- Configuration -->
+    <CommandClass id="112">
+        <Value type="short" genre="config" instance="1" index="1" label="CO2 Notification threshold" size="2" min="1" max="1200" units="ppm" value="1">
+            <Help>CO2 Notification threshold 1 to 2000ppm</Help>
+        </Value>
+    </CommandClass>
+    <!-- Association Groups -->
+    <CommandClass id="133">
+        <Associations num_groups="2">
+            <Group index="1" max_associations="5" label="Notification" auto="false"/>
+            <Group index="1" max_associations="1" label="Lifeline" auto="true"/>
+        </Associations>
+    </CommandClass>
+</Product>
